--- a/notebooks/pipelines.ipynb
+++ b/notebooks/pipelines.ipynb
@@ -6,11 +6,11 @@
    "id": "a88becce-b0b0-45a9-b21b-f840d17c9fde",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-12-14T01:07:05.172162Z",
-     "iopub.status.busy": "2021-12-14T01:07:05.171673Z",
-     "iopub.status.idle": "2021-12-14T01:07:06.414101Z",
-     "shell.execute_reply": "2021-12-14T01:07:06.413495Z",
-     "shell.execute_reply.started": "2021-12-14T01:07:05.172057Z"
+     "iopub.execute_input": "2021-12-14T03:05:18.687532Z",
+     "iopub.status.busy": "2021-12-14T03:05:18.687069Z",
+     "iopub.status.idle": "2021-12-14T03:05:21.269535Z",
+     "shell.execute_reply": "2021-12-14T03:05:21.268831Z",
+     "shell.execute_reply.started": "2021-12-14T03:05:18.687429Z"
     },
     "tags": []
    },
@@ -39,11 +39,11 @@
    "id": "ba3d7296-2ead-4318-8984-d95bb5f40cc9",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-12-14T01:07:06.416322Z",
-     "iopub.status.busy": "2021-12-14T01:07:06.416155Z",
-     "iopub.status.idle": "2021-12-14T01:07:06.654510Z",
-     "shell.execute_reply": "2021-12-14T01:07:06.653913Z",
-     "shell.execute_reply.started": "2021-12-14T01:07:06.416301Z"
+     "iopub.execute_input": "2021-12-14T03:05:21.271229Z",
+     "iopub.status.busy": "2021-12-14T03:05:21.271028Z",
+     "iopub.status.idle": "2021-12-14T03:05:21.982380Z",
+     "shell.execute_reply": "2021-12-14T03:05:21.981514Z",
+     "shell.execute_reply.started": "2021-12-14T03:05:21.271209Z"
     },
     "tags": []
    },
@@ -86,11 +86,11 @@
    "id": "ef2cabd9-8184-462b-a751-e20e65496487",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-12-14T01:07:06.656559Z",
-     "iopub.status.busy": "2021-12-14T01:07:06.656367Z",
-     "iopub.status.idle": "2021-12-14T01:07:06.888538Z",
-     "shell.execute_reply": "2021-12-14T01:07:06.887649Z",
-     "shell.execute_reply.started": "2021-12-14T01:07:06.656533Z"
+     "iopub.execute_input": "2021-12-14T03:05:21.983831Z",
+     "iopub.status.busy": "2021-12-14T03:05:21.983672Z",
+     "iopub.status.idle": "2021-12-14T03:05:22.219084Z",
+     "shell.execute_reply": "2021-12-14T03:05:22.218423Z",
+     "shell.execute_reply.started": "2021-12-14T03:05:21.983813Z"
     },
     "tags": []
    },
@@ -163,7 +163,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Graph at 0x7fad737bf1c0>"
+       "<graphviz.graphs.Graph at 0x10d6d21c0>"
       ]
      },
      "execution_count": 3,
@@ -181,11 +181,11 @@
    "id": "d68d4524-0277-4e65-9211-b4ece658cf5f",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-12-14T01:07:06.890301Z",
-     "iopub.status.busy": "2021-12-14T01:07:06.890059Z",
-     "iopub.status.idle": "2021-12-14T01:07:07.141645Z",
-     "shell.execute_reply": "2021-12-14T01:07:07.140901Z",
-     "shell.execute_reply.started": "2021-12-14T01:07:06.890269Z"
+     "iopub.execute_input": "2021-12-14T03:05:22.221721Z",
+     "iopub.status.busy": "2021-12-14T03:05:22.221506Z",
+     "iopub.status.idle": "2021-12-14T03:05:22.453734Z",
+     "shell.execute_reply": "2021-12-14T03:05:22.452886Z",
+     "shell.execute_reply.started": "2021-12-14T03:05:22.221701Z"
     },
     "tags": []
    },
@@ -228,11 +228,11 @@
    "id": "5765cdb2-7a22-4378-8782-2191a0abc4e5",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-12-14T01:07:07.143343Z",
-     "iopub.status.busy": "2021-12-14T01:07:07.143111Z",
-     "iopub.status.idle": "2021-12-14T01:07:07.399396Z",
-     "shell.execute_reply": "2021-12-14T01:07:07.398737Z",
-     "shell.execute_reply.started": "2021-12-14T01:07:07.143317Z"
+     "iopub.execute_input": "2021-12-14T03:05:22.455475Z",
+     "iopub.status.busy": "2021-12-14T03:05:22.455168Z",
+     "iopub.status.idle": "2021-12-14T03:05:22.682143Z",
+     "shell.execute_reply": "2021-12-14T03:05:22.681162Z",
+     "shell.execute_reply.started": "2021-12-14T03:05:22.455445Z"
     },
     "tags": []
    },
@@ -316,7 +316,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Graph at 0x7fad737bf4f0>"
+       "<graphviz.graphs.Graph at 0x10d6b3df0>"
       ]
      },
      "execution_count": 5,
@@ -334,11 +334,11 @@
    "id": "2e154f48-c0fd-452a-9164-117fa2368d9d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-12-14T01:07:07.400902Z",
-     "iopub.status.busy": "2021-12-14T01:07:07.400710Z",
-     "iopub.status.idle": "2021-12-14T01:07:07.634742Z",
-     "shell.execute_reply": "2021-12-14T01:07:07.633815Z",
-     "shell.execute_reply.started": "2021-12-14T01:07:07.400878Z"
+     "iopub.execute_input": "2021-12-14T03:05:22.684251Z",
+     "iopub.status.busy": "2021-12-14T03:05:22.683910Z",
+     "iopub.status.idle": "2021-12-14T03:05:22.907166Z",
+     "shell.execute_reply": "2021-12-14T03:05:22.906366Z",
+     "shell.execute_reply.started": "2021-12-14T03:05:22.684226Z"
     },
     "tags": []
    },
@@ -378,11 +378,11 @@
    "id": "6d031e45-8ff1-4672-8bef-c94420739342",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-12-14T01:07:07.636550Z",
-     "iopub.status.busy": "2021-12-14T01:07:07.636346Z",
-     "iopub.status.idle": "2021-12-14T01:07:07.861143Z",
-     "shell.execute_reply": "2021-12-14T01:07:07.860187Z",
-     "shell.execute_reply.started": "2021-12-14T01:07:07.636525Z"
+     "iopub.execute_input": "2021-12-14T03:05:22.909095Z",
+     "iopub.status.busy": "2021-12-14T03:05:22.908910Z",
+     "iopub.status.idle": "2021-12-14T03:05:23.122331Z",
+     "shell.execute_reply": "2021-12-14T03:05:23.121622Z",
+     "shell.execute_reply.started": "2021-12-14T03:05:22.909073Z"
     },
     "tags": []
    },
@@ -433,7 +433,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Graph at 0x7fad737bf610>"
+       "<graphviz.graphs.Graph at 0x10d6d2430>"
       ]
      },
      "execution_count": 7,
@@ -456,9 +456,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "tpx_test",
+   "display_name": "pipe_tests",
    "language": "python",
-   "name": "tpx_test"
+   "name": "pipe_tests"
   },
   "language_info": {
    "codemirror_mode": {
@@ -470,7 +470,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
